[gd_scene format=4 uid="uid://cipfjjnfwys0s"]

[ext_resource type="Script" uid="uid://dhsy2gcmw10d7" path="res://scripts/PLAT/playerPLAT.gd" id="1_kb1t0"]
[ext_resource type="Texture2D" uid="uid://ckvom4onys4co" path="res://assets/Bonhomme.png" id="2_mfc2s"]
[ext_resource type="Texture2D" uid="uid://dqoc63t4i2ffi" path="res://assets/Ejbiver.png" id="3_kb1t0"]
[ext_resource type="PackedScene" uid="uid://bvcwmjxf7074o" path="res://scenes/PLAT/finishPLAT.tscn" id="4_mfc2s"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8mcqr"]
radius = 21.0
height = 106.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mfc2s"]
texture = ExtResource("3_kb1t0")
texture_region_size = Vector2i(115, 122)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-57.5, -60, 57.5, -60, 57.5, 60, -57.5, 60)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-57.5, -60, 57.5, -60, 57.5, 60, -57.5, 60)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-57.5, -60, 57.5, -60, 57.5, 60, -57.5, 60)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-57.5, -60, 57.5, -60, 57.5, 60, -57.5, 60)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-57.5, -60, 57.5, -60, 57.5, 60, -57.5, 60)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-57.5, -60, 57.5, -60, 57.5, 60, -57.5, 60)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-57.5, -60, 57.5, -60, 57.5, 60, -57.5, 60)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-57.5, -60, 57.5, -60, 57.5, 60, -57.5, 60)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-57.5, -60, 57.5, -60, 57.5, 60, -57.5, 60)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-57.5, -60, 57.5, -60, 57.5, 60, -57.5, 60)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-57.5, -60, 57.5, -60, 57.5, 60, -57.5, 60)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-57.5, -60, 57.5, -60, 57.5, 60, -57.5, 60)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-57.5, -60, 57.5, -60, 57.5, 60, -57.5, 60)

[sub_resource type="TileSet" id="TileSet_58rt4"]
tile_size = Vector2i(115, 120)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_mfc2s")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a5a4d"]
size = Vector2(8145, 99.5)

[node name="PLAT" type="Node2D" unique_id=1537810515]

[node name="PlayerPLAT" type="CharacterBody2D" parent="." unique_id=760950186]
position = Vector2(221, 521)
script = ExtResource("1_kb1t0")
SPEED = 400.0
JUMP_VELOCITY = -750.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerPLAT" unique_id=273913912]
shape = SubResource("CapsuleShape2D_8mcqr")

[node name="Sprite2D" type="Sprite2D" parent="PlayerPLAT" unique_id=377446808]
z_index = 1
z_as_relative = false
position = Vector2(4.9999995, 0)
scale = Vector2(0.042968757, 0.07026958)
texture = ExtResource("2_mfc2s")

[node name="Camera2D" type="Camera2D" parent="PlayerPLAT" unique_id=1715997286]
position = Vector2(572, -69)

[node name="LD" type="Node2D" parent="." unique_id=1109804948]

[node name="TileMapLayer" type="TileMapLayer" parent="LD" unique_id=370170988]
tile_map_data = PackedByteArray("AAACAAUAAAABAAAAAAABAAUAAAABAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAEAAAABAAYAAAABAAEAAAADAAQAAAAAAAAAAAADAAUAAAABAAEAAAAEAAQAAAABAAAAAAAFAAMAAAAAAAEAAAAFAAIAAAAAAAAAAAAGAAIAAAACAAAAAAAHAAMAAAACAAAAAAAIAAUAAAACAAAAAAAHAAQAAAACAAEAAAACAAYAAAABAAEAAAADAAYAAAABAAEAAAAEAAYAAAABAAEAAAAEAAUAAAABAAEAAAAFAAUAAAABAAEAAAAFAAYAAAABAAEAAAAGAAUAAAABAAEAAAAGAAQAAAABAAEAAAAFAAQAAAABAAEAAAAGAAMAAAABAAEAAAAGAAYAAAABAAEAAAAHAAUAAAABAAEAAAAHAAYAAAABAAEAAAAIAAYAAAABAAEAAAALAAEAAAABAAAAAAAMAAEAAAABAAAAAAANAAEAAAABAAAAAAAOAAEAAAACAAAAAAAKAAIAAAABAAEAAAAJAAIAAAAAAAIAAAAJAAEAAAAAAAAAAAAKAAEAAAABAAAAAAAKAAUAAAAAAAEAAAAKAAQAAAAAAAEAAAAKAAMAAAAAAAEAAAAJAAYAAAABAAAAAAALAAIAAAABAAEAAAAMAAIAAAABAAEAAAANAAIAAAABAAEAAAAOAAIAAAACAAEAAAAOAAMAAAACAAEAAAANAAMAAAABAAEAAAAMAAMAAAABAAEAAAALAAMAAAABAAEAAAALAAQAAAABAAEAAAAMAAQAAAABAAEAAAANAAQAAAABAAEAAAAOAAQAAAACAAEAAAAOAAUAAAACAAEAAAANAAUAAAABAAEAAAAMAAUAAAABAAEAAAALAAUAAAABAAEAAAAKAAYAAAABAAEAAAALAAYAAAABAAEAAAAMAAYAAAABAAEAAAANAAYAAAABAAEAAAAOAAYAAAACAAEAAAAfAAUAAAABAAEAAAAfAAQAAAABAAEAAAAfAAMAAAABAAEAAAAfAAIAAAABAAEAAAAfAAEAAAABAAAAAAAgAAEAAAABAAAAAAAhAAAAAAAAAAAAAAAiAAAAAAACAAAAAAAiAAEAAAACAAEAAAAiAAIAAAACAAEAAAAiAAMAAAACAAEAAAAiAAQAAAACAAEAAAAiAAUAAAACAAEAAAAiAAYAAAACAAEAAAAfAAYAAAABAAEAAAAgAAYAAAABAAEAAAAhAAYAAAABAAEAAAAhAAUAAAABAAEAAAAhAAQAAAABAAEAAAAgAAQAAAABAAEAAAAgAAMAAAABAAEAAAAgAAIAAAABAAEAAAAgAAUAAAABAAEAAAAhAAIAAAABAAEAAAAhAAEAAAABAAEAAAAhAAMAAAABAAEAAAATAAEAAAABAAAAAAAUAAEAAAACAAAAAAATAAIAAAABAAIAAAAUAAIAAAACAAIAAAAAAAcAAAAAAAEAAAAAAAgAAAAAAAEAAAABAAcAAAABAAEAAAABAAgAAAABAAEAAAACAAcAAAABAAEAAAADAAcAAAABAAEAAAADAAgAAAABAAEAAAAEAAgAAAABAAEAAAAEAAcAAAABAAEAAAACAAgAAAABAAEAAAAFAAgAAAABAAEAAAAGAAgAAAABAAEAAAAHAAgAAAABAAEAAAAHAAcAAAABAAEAAAAGAAcAAAABAAEAAAAFAAcAAAABAAEAAAAIAAcAAAABAAEAAAAJAAcAAAABAAEAAAAKAAcAAAABAAEAAAAKAAgAAAABAAEAAAAJAAgAAAABAAEAAAAIAAgAAAABAAEAAAALAAcAAAABAAEAAAAMAAcAAAABAAEAAAAMAAgAAAABAAEAAAALAAgAAAABAAEAAAANAAgAAAABAAEAAAAOAAgAAAACAAEAAAANAAcAAAABAAEAAAAOAAcAAAACAAEAAAAfAAcAAAABAAEAAAAgAAcAAAABAAEAAAAhAAcAAAABAAEAAAAiAAcAAAACAAEAAAAiAAgAAAACAAEAAAAhAAgAAAABAAEAAAAgAAgAAAABAAEAAAAfAAgAAAABAAEAAAAZAAIAAAABAAIAAAAZAAEAAAABAAAAAAAaAAEAAAACAAAAAAAaAAIAAAACAAIAAAASAAEAAAAAAAAAAAASAAIAAAAAAAIAAAAYAAEAAAAAAAAAAAAYAAIAAAAAAAIAAAAeAAEAAAAAAAAAAAAeAAIAAAAAAAEAAAAeAAMAAAAAAAEAAAAeAAQAAAAAAAEAAAAeAAUAAAAAAAEAAAAeAAYAAAAAAAEAAAAeAAcAAAAAAAEAAAAeAAgAAAAAAAEAAAAnAAAAAAAAAAAAAAAnAAEAAAAAAAEAAAAnAAIAAAAAAAEAAAAnAAMAAAAAAAEAAAAnAAQAAAAAAAEAAAAnAAUAAAAAAAEAAAAnAAYAAAAAAAEAAAAnAAcAAAAAAAEAAAAnAAgAAAAAAAEAAAAoAAAAAAACAAAAAAApAAEAAAABAAAAAAAqAAEAAAABAAAAAAArAAEAAAACAAAAAAArAAIAAAACAAEAAAArAAMAAAACAAEAAAArAAQAAAACAAEAAAArAAUAAAACAAEAAAArAAYAAAACAAEAAAArAAcAAAACAAEAAAArAAgAAAACAAEAAAAoAAgAAAABAAEAAAAoAAcAAAABAAEAAAAoAAYAAAABAAEAAAAoAAUAAAABAAEAAAAoAAQAAAABAAEAAAAoAAMAAAABAAEAAAAoAAIAAAABAAEAAAAoAAEAAAABAAEAAAApAAIAAAABAAEAAAAqAAIAAAABAAEAAAAqAAMAAAABAAEAAAAqAAQAAAABAAEAAAAqAAUAAAABAAEAAAAqAAYAAAABAAEAAAApAAYAAAABAAEAAAApAAcAAAABAAEAAAApAAgAAAABAAEAAAAqAAgAAAABAAEAAAAqAAcAAAABAAEAAAApAAQAAAABAAEAAAApAAMAAAABAAEAAAApAAUAAAABAAEAAAAwAAEAAAAAAAIAAAAwAAAAAAAAAAAAAAAxAAAAAAABAAAAAAAyAAAAAAACAAAAAAAyAAEAAAACAAIAAAAxAAEAAAABAAIAAAA3AAAAAAAAAAIAAAA3AP//AAAAAAAAAAA4AP//AAABAAAAAAA4AAAAAAABAAIAAAA5AAAAAAACAAIAAAA5AP//AAACAAAAAAA+AP7/AAAAAAAAAAA+AP//AAAAAAEAAAA+AAAAAAAAAAEAAAA+AAEAAAAAAAEAAAA+AAIAAAAAAAEAAAA+AAMAAAAAAAEAAAA+AAQAAAAAAAEAAAA+AAUAAAAAAAEAAAA+AAYAAAAAAAEAAAA+AAcAAAAAAAEAAAA+AAgAAAAAAAEAAAA/AP7/AAACAAAAAABAAP//AAABAAAAAABBAP//AAABAAAAAABBAAAAAAABAAEAAABBAAEAAAABAAEAAABBAAIAAAABAAEAAABBAAMAAAABAAEAAABBAAQAAAABAAEAAABBAAUAAAABAAEAAABBAAYAAAABAAEAAABBAAcAAAABAAEAAABBAAgAAAABAAEAAAA/AAgAAAABAAEAAABAAAgAAAABAAEAAABAAAcAAAABAAEAAAA/AAcAAAABAAEAAAA/AAYAAAABAAEAAABAAAUAAAABAAEAAABAAAYAAAABAAEAAAA/AAUAAAABAAEAAAA/AAQAAAABAAEAAAA/AAMAAAABAAEAAAA/AAIAAAABAAEAAAA/AAEAAAABAAEAAAA/AAAAAAABAAEAAAA/AP//AAABAAEAAABAAAAAAAABAAEAAABAAAEAAAABAAEAAABAAAIAAAABAAEAAABAAAMAAAABAAEAAABAAAQAAAABAAEAAABCAP//AAABAAAAAABDAP//AAABAAAAAABEAP//AAABAAAAAABFAP//AAABAAAAAABGAP//AAACAAAAAABGAAAAAAACAAEAAABGAAEAAAACAAEAAABGAAIAAAACAAEAAABGAAMAAAACAAEAAABGAAQAAAACAAEAAABGAAUAAAACAAEAAABGAAYAAAACAAEAAABGAAcAAAACAAEAAABGAAgAAAACAAEAAABCAAgAAAABAAEAAABDAAgAAAABAAEAAABEAAgAAAABAAEAAABFAAgAAAABAAEAAABFAAcAAAABAAEAAABEAAcAAAABAAEAAABEAAYAAAABAAEAAABDAAcAAAABAAEAAABCAAcAAAABAAEAAABCAAYAAAABAAEAAABDAAYAAAABAAEAAABFAAYAAAABAAEAAABCAAUAAAABAAEAAABDAAUAAAABAAEAAABEAAUAAAABAAEAAABFAAUAAAABAAEAAABFAAQAAAABAAEAAABEAAQAAAABAAEAAABDAAQAAAABAAEAAABCAAQAAAABAAEAAABCAAMAAAABAAEAAABCAAIAAAABAAEAAABDAAIAAAABAAEAAABDAAMAAAABAAEAAABEAAMAAAABAAEAAABCAAEAAAABAAEAAABCAAAAAAABAAEAAABDAAAAAAABAAEAAABEAAAAAAABAAEAAABFAAAAAAABAAEAAABFAAEAAAABAAEAAABFAAIAAAABAAEAAABFAAMAAAABAAEAAABEAAIAAAABAAEAAABEAAEAAAABAAEAAABDAAEAAAABAAEAAAA=")
tile_set = SubResource("TileSet_58rt4")

[node name="DeathZone" type="Area2D" parent="LD" unique_id=1604480339]
position = Vector2(716, 1180)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LD/DeathZone" unique_id=297677574]
position = Vector2(3376.5, 10.25)
shape = SubResource("RectangleShape2D_a5a4d")

[node name="FinishPlat" parent="." unique_id=138341825 instance=ExtResource("4_mfc2s")]
position = Vector2(7950.0005, -240.00002)
scale = Vector2(0.12109384, 0.12792973)

[connection signal="body_entered" from="LD/DeathZone" to="PlayerPLAT" method="_on_death_zone_body_entered"]
[connection signal="body_entered" from="FinishPlat/FinishArea" to="PlayerPLAT" method="_on_finish_area_body_entered"]

[editable path="FinishPlat"]
